<resources>
    <string name="app_name">Juicee</string>
    <string name="verify">Button</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="mail">Mail</string>
    <string name="profile">Profile</string>>
    <string name="please">Please sign in with Google</string>>
    <string name="yourProfile">Your Profile</string>>
    <string name="edit">Edit Profile</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="profile_description">Description for Profile Description</string>
    <string name="profileImageDescription">This is the profile image</string>
    <string name="profile_description_text">Test</string>>
    <string name="imageGoogleDescription">This is the google image</string>
    <string name="back_button_description">Back Button Description</string>
    <string name="edit_profile_image_description">Edit Profile Image Description</string>
    <string name="edit_activity_level_description">Edit Activity Level Description</string>>

    <string name="activity_level">Activiy Level</string>>
    <string name="age">Age</string>>
    <string name="height">Height</string>>
    <string name="weight">Weight</string>
    <string name="water_glasses">"Water glasses: "</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="how_much_did_you_drink_today">How much did you drink today?<br/>(250ml Glasses)</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="please_input_your_data">Please input your data</string>
    <string name="logo">Logo</string>
    <string name="please_log_in">Please log in</string>
    <string name="add_drink">ADD DRINK</string>
    <string name="_0_0">0.0</string>
    <string name="juicee">Juicee</string>
    <string name="ready_to_hydrate">Ready to hydrate?</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="confirm">Confirm</string>
</resources>