<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/weightValue"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="50dp"
        android:text="0.0"
        app:layout_constraintBottom_toTopOf="@+id/FormConfirmButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/google_SignIn"
        style="@style/mainButtons"
        android:layout_width="151dp"
        android:layout_height="61dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="40dp"
        android:text="@string/logout"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FormConfirmButton"
        style="@style/mainButtons"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="#3D99D8"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/google_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#3D99D8"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="220dp"
        android:text="@string/user_name"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/FormConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="271dp"
        android:layout_height="147dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/profileImageDescription"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782"
        app:srcCompat="@drawable/avatar"
        tools:srcCompat="@drawable/avatar" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="73dp"
        android:layout_height="67dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#3D99D8"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back_button"
        android:background="@drawable/btn_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/activityLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="60dp"
        android:text="@string/activity_level"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="60dp"
        android:text="@string/age"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/height"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/FormConfirmButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/weight"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/FormConfirmButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/activityLevelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ageValue"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/heightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto"
        android:text="0.0"
        app:layout_constraintBottom_toTopOf="@+id/FormConfirmButton"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>