<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryWhite"
    android:id="@+id/edit_profile_activity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editHeightInputLayout"
        style="@style/CustomInputLayoutStyle"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:textColorHint="@color/hintColor"
        app:hintTextColor="@color/inputBorderFocused"
        app:layout_constraintBottom_toTopOf="@+id/editWeightInputLayout"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightInput"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/roboto"
            android:hint="Height (cm)"
            android:inputType="number"
            android:paddingStart="16dp"
            android:textColor="@color/primaryBlack"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editWeightInputLayout"
        style="@style/CustomInputLayoutStyle"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginTop="0dp"
        android:textColorHint="@color/hintColor"
        app:hintTextColor="@color/inputBorderFocused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/editHeightInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/roboto"
            android:hint="Weight (kg)"
            android:inputType="number"
            android:paddingStart="16dp"
            android:textColor="@color/primaryBlack"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editAgeInputLayout"
        style="@style/CustomInputLayoutStyle"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginTop="0dp"
        android:textColorHint="@color/hintColor"
        app:hintTextColor="@color/inputBorderFocused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/editWeightInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageInput"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/roboto"
            android:hint="Age"
            android:inputType="number"
            android:paddingStart="16dp"
            android:textColor="@color/primaryBlack"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editActivitLevelInputLayout"
        style="@style/CustomInputLayoutStyle"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/hintColor"
        app:hintTextColor="@color/inputBorderFocused"
        app:layout_constraintBottom_toTopOf="@+id/initalFormConfirmButton"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAgeInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityLevelInput"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:contentDescription="@string/edit_activity_level_description"
            android:fontFamily="@font/roboto"
            android:hint="Activity Level"
            android:inputType="number"
            android:paddingStart="16dp"
            android:textColor="@color/primaryBlack"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/initalFormConfirmButton"
        style="@style/mainButtons"
        android:layout_width="206dp"
        android:layout_height="70dp"
        android:layout_marginBottom="132dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/confirm_changes"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/editProfileImage"
        android:layout_width="195dp"
        android:layout_height="147dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/edit_profile_image_description"
        app:layout_constraintBottom_toTopOf="@+id/editHeightInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        tools:srcCompat="@drawable/avatar" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="73dp"
        android:layout_height="67dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#3D99D8"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#FFFFFF" />


</androidx.constraintlayout.widget.ConstraintLayout>